--- a/polybar/beach/config.ini
+++ b/polybar/beach/config.ini
@@ -121,18 +121,18 @@ padding = 2
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
-module-margin-left = 1
-module-margin-right = 1
+module-margin-left = 2
+module-margin-right = 2
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
-;   font-0 = "Terminus:size=8;3"
+;   font-0 = "Iosevka Nerd Font:size=10;3"
 ;   font-1 = MaterialIcons:size=10
 ;   font-2 = Termsynu:size=8;-1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Terminus:size=8;3"
+font-0 = "Iosevka Nerd Font:size=10;3"
 font-1 = "waffle:size=12;3"
 font-2 = "Terminus:size=8;3"
 
