--- a/polybar/forest/config.ini
+++ b/polybar/forest/config.ini
@@ -65,7 +65,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 28
+height = 30
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -126,13 +126,13 @@ module-margin-right = 1
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
-;   font-0 = "Terminus:Medium:size=9;2"
+;   font-0 = "Iosevka Nerd Font:size=10;3"
 ;   font-1 = MaterialIcons:size=10
 ;   font-2 = Termsynu:size=8;-1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Terminus:Medium:size=9;2"
+font-0 = "Iosevka Nerd Font:size=10;3"
 font-1 = "waffle:size=12;2"
 
 ; Modules are added to one of the available blocks
